K8S_deployment/ms-scolarite-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-scolarite-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-scolarite-pod
  template:
    metadata:
      labels:
        app: ms-scolarite-pod
    spec:
      containers:
        - name: ms-scolarite-container
          image: scolarite-image
          ports:
            - containerPort: 8080
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ms-scolarite-srv
spec:
  selector:
    app: ms-scolarite-pod
  ports:
    - port: 8082
      targetPort: 8080
      protocol: TCP
