K8S_deployment/mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-depy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-pod
  template:
    metadata:
      labels:
        app: mysql-pod
    spec:
      containers:
       - image: mysql
         name: mysql-container
         ports:
           - containerPort: 3306
         
         volumeMounts:
           - name: mysql-persistent-storage
             mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-srv
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-pod
